# ChangeLog for media-libs/openctm
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/openctm/ChangeLog,v 1.4 2014/08/13 20:17:26 amynka Exp $

  13 Aug 2014; Amy Winston <amynka@gentoo.org> metadata.xml:
  3dprint herd added

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> openctm-1.0.3.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  10 Aug 2014; Amy Winston <amynka@gentoo.org>
  files/openctm-fix-makefiles.patch, openctm-1.0.3.ebuild:
  Obey settings of CC and CXX. Update patch from debian to reflect this.

*openctm-1.0.3 (07 Aug 2014)

  07 Aug 2014; Amy Winston <amynka@gentoo.org>
  +files/openctm-fix-makefiles.patch, +metadata.xml, +openctm-1.0.3.ebuild:
  Initial commit. Package will be used by meshlab