@@ -3,17 +3,17 @@ Hash: SHA256
 
 AUX openctm-fix-makefiles.patch 6908 SHA256 821da3d78579b566bb2e533e3a695ee14491826f79013a4c48e41e9bf36cb9ca SHA512 448a015695f98969320af6b80410f6596bf46b2fba9529637be7e51851552c6056871b1de21e98db01d255db1e71711f78c3e51d161c85dcb52dc5341545be74 WHIRLPOOL 367121b35e450c075d65d7e61730953655f3adefcb9d8f23ce03ac424deb24f45b9a9ba66f269e6707f6e1d481df2d8a7db297f058eeb9568fc549a42eba2d10
 DIST openctm_1.0.3+dfsg1.orig.tar.bz2 179792 SHA256 b72bae806d65dcb4d55b88f17bb636c9908717871cbebff6c32024399f50a074 SHA512 4ea8c9230e01b57fce4d741df77713df8fb0493fbb20c8d4b183e3e8cec16f97e8003d2569b1c7cac07a17d334711673c0fed0c6c050bbdb901028ee9f6c32f6 WHIRLPOOL 954ce30a418fba80649cd2f0eae604391c42a64e627a9d66171097da6fee55fba94229054350dc18cd311cc7d7fb0e1b5a6f9d7db0dce5d91451821df33da5f7
-EBUILD openctm-1.0.3.ebuild 932 SHA256 013bc4dc37d92955049eb7aadbede426d3ba34a3f0905a71e3b08c7caa9198b7 SHA512 e033f0222b58f1b33bdff32bb068f587885aa29642bc4dfd89af4daaaee22797977bbb2a92a6697dd4f1cf68ea264368ae6a98d7c4922ef6c6e6ac0b104bd7ef WHIRLPOOL 7a355fab3ad4122f59953200dace5629b219ff6afd9f1c7d544f244fb59ace2f7a16fb54dc68e89f26206f92c6dfc40855fbd7b5e03df3ee17ce719763d4591f
-MISC ChangeLog 793 SHA256 b2aa84ae1201b2da1210ddc5364e6ea8552346d2f2df11b73c33f9459cd6a4b3 SHA512 8fcda56b7d78a2e032d0ae7d21049b155e8fcd7a168f23ae39fc957768d1981a552429178f644eb1e328724ea0ccbd21fc04bce77005ebd49810288d1ba7fda3 WHIRLPOOL 4d691a582bd1ad82e15fc032a6790398a5fabfbbeffa639e38faa6f54bcbad344abf0970b48f9f1c3ccc0b090b8a4abac615191fc2bdd4915fb4cb41b052d7c5
+EBUILD openctm-1.0.3.ebuild 949 SHA256 b881b3089fd45683e33d1b7c9921c52c80a1c649ea594e5087950478c03efee8 SHA512 afba035d2288e86ddf365cfedf41a515d3c3d8ae5d82ef2f8627da2820fb85763c747b4f85461e02cdee4eef692671e6f5f39dc6375c1fba4a517e12fd2f9b6b WHIRLPOOL fc2e7da5b6b1c97870efdb26f047c3096d688c0dfa75e3520f878d831dace04f2142cd8a1402ca387b4ba111cb18d5cb09d7c2a6b2aada95bc4672348e52ef5d
+MISC ChangeLog 882 SHA256 4585aae6ec048a0fad6feb843066a6748dd60c5f57f07913484758777f767e81 SHA512 1d7e4891080fc41161fadf65d5d23fa51ca9cfc0c200fca4b8aac48bbc150f14181554ea575626d19869f9728a59bd730bbec2afbf4f7383648ed97c768718a1 WHIRLPOOL 88c3ca2efd81bbb86eda1484a602dab6a886713938d336e1563922c818805f6d6b9232b00b23ac941ca6658cebb7cfd0077511ce4eb60ac29f5be347240a54e2
 MISC metadata.xml 408 SHA256 b8790e3619803316f037b5b4453987244b83cc01a52441ce2635ae557359e0f4 SHA512 280a95fb81d6790f12dd4895bd970c22e6edb2d8709107b2c50bfbd695a0d439f0f5018fc30f2039bfeed2ff5554f63e7110dd1519f74327c87c62acbedef05a WHIRLPOOL 3792b2d312e79d7b8badfca763865100c2f9fb53ca1b455eb56c68050ec4474ed2fb66ef53af4a9e47996cf657b79c52b3800ae407e352af1fc85a571923de97
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJT68fXAAoJEDuJ1FA05peBYCsIANPHQOeLehdcapltIyN64fPi
-A18xDvSNAiY6vstvvYF4UssCsUFyaXdU9kdxxOyKCT6wOnf2PqQaYS6LqzDQmeUB
-44KJihb13BTnOJeTgzbahWDIWflcxAJ67GFeHyrOWFe9A1ZF191CdcwruahXtgIl
-i2vLG6nO7g1owWmlu2A0KURPuwwdViUr4leWcWZt+Fdox4RUErbCe2zw8S4CgS8o
-gwU28Gtn37ezJrd+tBa839sWcBnUDHzO/KsDNrr0J2WHwP41tmXIvvQAmNJ78a48
-Czld/Uq26d5+6/4vyX9PF680LKeXFoxoJUBqQhCPqpqToHToGaiQQmJ4gRO2nbI=
-=M1/z
+iQEcBAEBCAAGBQJT8ogbAAoJEDuJ1FA05peBRswH+wZGxgvs+afynK4k/tRLB9bR
+2tT96jUz1nBXKAjXDgbwNmYYJi824UsI80RGi0aI6U6BKcLW3m7Ed3MDMpx57EZF
+E+Ija5N1DS4nst9eKYPuhVUNJ+ziLPCGeWjaHhm0u96LQ4KW9gWXMPTkHimTm13O
+94dUnYK79PN1zORJ0vY/Az+7pjkzTa+xSquGHkUFpro6v6cHu4Gl/E8C/Om42S4M
+zlCXRFNLiRlFPBoOjRvFSO9Zf2vGVhqymFxz9x24DpZ5vZfLRuPV9jkp9H7oEuA/
+ZDBUm6vIZw7ZFSYt3UHzSp7sLinzFw+o8MMG9/kZXw0bdmOVrI727xhIhJ1lY2c=
+=LdcW
 -----END PGP SIGNATURE-----
