@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/openctm/openctm-1.0.3.ebuild,v 1.3 2014/08/10 21:11:17 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/openctm/openctm-1.0.3.ebuild,v 1.4 2014/08/18 23:11:10 amynka Exp $
 
 EAPI=5
 
@@ -8,7 +8,7 @@ inherit eutils multilib versionator flag-o-matic
 
 MY_PF=OpenCTM-${PV}
 
-DESCRIPTION="OpenCTM - the Open Compressed Triangle Mesh"
+DESCRIPTION="OpenCTM - the Open Compressed Triangle Mesh."
 HOMEPAGE="http://openctm.sourceforge.net"
 SRC_URI="mirror://debian/pool/main/o/${PN}/${PN}_${PV}+dfsg1.orig.tar.bz2"
 
@@ -31,7 +31,7 @@ src_prepare() {
 	mv Makefile.linux Makefile
 
 	# do not use strip
-	sed -i -e 's:-s ::g' \
+	sed -i -e 's:\(LDFLAGS.*\)-s :\1 :g' \
 		"${S}"/Makefile \
 		"${S}"/*/Makefile.linux || die
 }
